// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkbox matches snapshots * active 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@checkbox matches snapshots * active: default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@checkbox matches snapshots * checked.disabled 1`] = `
<Wrapper
  checked={true}
  disabled={true}
  forwardedRef={null}
/>
`;

exports[`@checkbox matches snapshots * default 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;

exports[`@checkbox matches snapshots * with text 1`] = `
<Wrapper
  checked={true}
  forwardedRef={null}
  text="Text"
  textStyle={
    Object {
      "color": "red",
      "fontSize": 18,
    }
  }
/>
`;
